chore: application general improvements  (#7)
* test: adjusting broken test because of struct changes

* chore: adding makefile and adjusting docker-compose yaml

* refactor: using tools.ValidateRequest to params check

* chore: adding swag in makefile

* chore: adjustings response requests

* docs: update docs swagger

* fix: removing the trailing slash

* refactor: request POST return entity product complete

* chore: adding collection & environments postman

* docs: creating readme application

* docs: update images readme
